--- a/inst/bootstrap_demo.html
+++ b/inst/bootstrap_demo.html
@@ -496,7 +496,7 @@
                   </div>
                   <div class="form-group">
                     <div class="col-lg-10 col-lg-offset-2">
-                      <button type="reset" class="btn btn-info">Cancel</button>
+                      <button type="reset" class="btn btn-default">Cancel</button>
                       <button type="submit" class="btn btn-primary">Submit</button>
                     </div>
                   </div>
